--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- Main card -->
   <main class="card" role="main" aria-labelledby="title">
-    <h1 id="title" class="heading">Tumaree liyee chotaa surprise</h1>
+    <h1 id="title" class="heading">Apke liyee chotaa surprise</h1>
     <p class="sub">Heyyy, Love <span aria-hidden="true">❤️</span></p>
     <p class="line">I have something for you <span aria-hidden="true">🦋</span></p>
     <p class="line pink">
